Name:                   hackage-use
Version:                0.0.0
Author:                 Athan Clark <athan.clark@gmail.com>
Maintainer:             Athan Clark <athan.clark@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Fetch
                        Fetch.Packages
                        Fetch.Versions
  Build-Depends:        base >= 4 && < 5
                      , aeson
                      , attoparsec
                      , bytestring
                      , haskell-src-exts
                      , http-client
                      , http-client-tls
                      , http-types
                      , persistent
                      , text

Executable hackage-use
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall -O2
  Main-Is:              Main.hs
  Other-Modules:        Fetch
                        Fetch.Packages
                        Fetch.Versions
  Build-Depends:        base >= 4 && < 5
                      , aeson
                      , attoparsec
                      , data-default
                      , directory
                      , bytestring
                      , haskell-src-exts
                      , http-client
                      , http-client-tls
                      , http-types
                      , mtl
                      , optparse-applicative
                      , path
                      , persistent
                      , text
                      , yaml

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , QuickCheck
                      , quickcheck-instances

Source-Repository head
  Type:                 git
--  Location:
